manifest/base/bhasai/document-service/deployment-document-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:

  labels:
    app.kubernetes.io/name: document-service
  name: document-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: document-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: document-service
    spec:
      containers:
        - envFrom:
          - secretRef:
              name: document-service
          image: ghcr.io/bharatsahaiyak/document-service:dev
          name: document-service
          resources:
            requests:
              memory: "512Mi"
              cpu: "1"
            limits:
              memory: "512Mi"
              cpu: "1"
      restartPolicy: Always
