manifest/base/bhasai/document-service/service-document-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: document-service
spec:
  selector:
    app.kubernetes.io/name: document-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
