manifest/base/bhasai/document-service/ingress-document-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: document-service 
  namespace: default
spec:
  ingressClassName: kong
  rules:
  - host: "document-service.k8s.bhasai.samagra.io"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: document-service
            port:
              number: 80
